methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:13: error: ';' expected but 'for' found.
**    for(i<-1 to 7){
      ^